--- a/json-postgres-part1/using-cross-join-lateral-jsonb-to-recordset.Rmd
+++ b/json-postgres-part1/using-cross-join-lateral-jsonb-to-recordset.Rmd
@@ -1,5 +1,4 @@
-# Parsing through JSON arrays in Postgres 
-## Using *cross join lateral* and *jsonb_to_recordset*
+<center># Parsing through JSON arrays in Postgres using *cross join lateral* and *jsonb_to_recordset*</center>
 
 Many data science courses and blogs cover the fun part of data science: designing machine (and deep) learning models for prediction. However, a precursor to the fun stuff is pulling the data from databases and preparing it for the machine learning algorithms we all love. 
 
