--- a/json-postgres-part1/using-cross-join-lateral-jsonb-to-recordset.Rmd
+++ b/json-postgres-part1/using-cross-join-lateral-jsonb-to-recordset.Rmd
@@ -127,6 +127,20 @@ customer_id | purchase_date | order_id | total_items | items | total_cost | gift
 315 | 2018-03-25 | 123 | 4 | ["eggs","avocado", "bread", "salt"] | 12.87 | "x": false
 
 
-One cautionary note, using 2 or more `CROSS JOIN LATERAL`'s in this format within the same query could duplicate your data so it's best to use this when you only need to parse and prepare through a single JSON array.
+**Two helpful notes:**
+1. If your JSON array contains a string that is *camel case* (e.g., camelCase), then you will need to keep the camel case and wrap that variable in double quotes. Example: referencing the query code above, if `total_items` was actually `totalItems`, my query would look as followed:  
+```SQL
+SELECT 
+  customer_id, purchase_date,
+  od."totalItems", od.total_cost
+FROM purchase_table
+CROSS JOIN LATERAL jsonb_to_recordset(order_detail) 
+  as od(
+    "totalItems" numeric,
+    total_cost float
+    )
+WHERE total_items >=3``` 
+
+2. Using *two or more `CROSS JOIN LATERAL`'s* in this format within the same query could duplicate your data so it's best to use this when you only need to parse and prepare through a single JSON array.
 
 So, there you have it! A new (and hopefully easier and helpful) way to use parse, join, and prepare your JSON data. Happy data-ing!
